--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <!-- El meta name sirve para responsive -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Website</title>
+    <meta charset="UTF-8" />
+    <meta name ="viewport" content="width = device-width, initial-scale = 1" >
+    <title>Alam Brito</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header class="header">
         <nav>
-            <a href="http://"><i></i> About</a>
-            <a href="http://"><i></i> Resume</a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="http://"><i><span class="icon-user"></span></i> About</a>
+            <a href="http://"><i><span class="icon-suitcase"></span></i> Work experience</a>
+            <a href="http://"><i><span class="icon-graduation-cap"></span></i> Education</a>
+            <a href="http://"><i><span class="icon-github-alt"></span></i> Portafolio</a>
+            <a href="http://"><i><span class="icon-github"></span></i> Contact</a>
         </nav>
     </header>
     <section>
-        <img src="./img/profile.png" alt="Imagen profile">
-        <h1>Liliana Franco</h1>
+        <img class="image-profile" src="./img/profile.png" alt="Imagen profile">
+        <h1>Alam Brito</h1>
         <h2>Project Manager y Scrum Master</h2>
         <ul>
-            <li><a href="http://"><i></i></a></li>
-            <li><a href="http://"><i></i></a></li>
-            <li><a href="http://"><i></i></a></li>
-            <li><a href="http://"><i></i></a></li>
-            <li><a href="http://"><i></i></a></li>
+            <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
+            <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
+            <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
+            <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
+            <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
         </ul>
         <footer>
             <a href="http://"><i></i> Download Cv</a>
             <a href="http://"><i></i> Contact me</a>
         </footer>
         <article></article>
+    </section>
+    <section>
+        <h1>About me</h1>
+        <p>Project Manager y Scrum Master</p>
     </section>
     <script src="script.js"></script>
 </body>
