Conexión a Apis y crear modal

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
             <a href="http://"><i><span class="icon-github"></span></i> Contact</a>
         </nav>
     </header>
+    <div class="modal" id="modal">
+    <div class="cerrar" id="Cerrar">X</div>
+    </div>
+
     <section>
-        <img class="image-profile" src="./img/profile.png" alt="Imagen profile">
-        <h1>Alam Brito</h1>
+        <img class="image-profile" src="./img/profile.png" alt="Imagen profile" id="userImage">
+        <h1 id="name">Alam Brito</h1>
         <h2>Project Manager y Scrum Master</h2>
         <ul>
             <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
@@ -29,9 +33,9 @@
             <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
             <li><a href="http://"><i><span class="icon-github"></span></i></a></li>
         </ul>
-        <footer>
-            <a href="http://"><i></i> Download Cv</a>
-            <a href="http://"><i></i> Contact me</a>
+        <footer class="footer">
+            <a href="http://"><i><span class="icon-download"></span></i> Download Cv</a>
+            <a href="http://"><i><span class="icon-phone-square"></span></i> Contact me</a>
         </footer>
         <article></article>
     </section>
